rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h460.26_2012_MEDIA-OVER-H2250.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h460.26_2012_MEDIA-OVER-H2250.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod media_over_h2250 {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    pub enum FrameData {
        #[rasn(size("12..=1500"))]
        rtp(OctetString),
        #[rasn(size("1..=1500"))]
        rtcp(OctetString),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct UDPFrame {
        #[rasn(value("0..=255"), identifier = "sessionId")]
        pub session_id: u8,
        #[rasn(identifier = "dataFrame")]
        pub data_frame: bool,
        pub frame: SequenceOf<FrameData>,
    }
    impl UDPFrame {
        pub fn new(session_id: u8, data_frame: bool, frame: SequenceOf<FrameData>) -> Self {
            Self {
                session_id,
                data_frame,
                frame,
            }
        }
    }
}
